Most work done on optymalizing site for tablet divices

--- a/my-app/src/pages/GameItemPages/TheLegendOfZelda-totk.scss
+++ b/my-app/src/pages/GameItemPages/TheLegendOfZelda-totk.scss
@@ -18,7 +18,7 @@
   margin-bottom: 10px;
   margin-top: 5.5rem;
 
-  @include mx.media(mobile-up) {
+  @include mx.media(tablet-up) {
     display: flex;
   }
 
