--- a/my-app/src/sections/cartSections/headerCart/headerCart.scss
+++ b/my-app/src/sections/cartSections/headerCart/headerCart.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: space-between;
   position: fixed;
-  padding: 0.5rem 0;
+  padding: 0.5rem 3rem;
   top: 0;
   z-index: 2;
   transition: .2s;
@@ -17,10 +17,9 @@
 
   @include mx.media(laptop-up) {
     flex-direction: row;
-    padding: 0 3rem;
+    padding: 1rem 3rem;
     margin-bottom: -7.3rem;
     height: 8rem;
-    padding: 1rem 0;
   }
 
   .logo-ig {
